# sea-orm-spanner

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml  prepare-release.yml  publish-release.yml  release-dry-run.yml
examples/basic-crud/: Cargo.toml
examples/basic-crud/src/: main.rs
examples/basic-crud/src/entities/: user.rs
examples/migration/: Cargo.toml
examples/migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_users.rs  m20220102_000001_create_posts.rs  m20260115_072606_create_table.rs  main.rs  unimplemented_create_table.rs
releases/: v0.1.0.md
scripts/: bump-version.sh
sea-orm-migration-spanner/: Cargo.toml  LICENSE-APACHE  README.md
sea-orm-migration-spanner/.cargo/: config.toml
sea-orm-migration-spanner/src/: cli.rs  lib.rs  migrator.rs  prelude.rs  schema.rs  schema_manager.rs
sea-orm-migration-spanner/tests/: migration_test.rs
sea-orm-spanner/: Cargo.toml
sea-orm-spanner/src/: connection.rs  database.rs  error.rs  lib.rs  proxy.rs  transaction.rs
sea-orm-spanner/tests/: activerecord_tests.rs
sea-orm-spanner/tests/common/: mod.rs
sea-orm-spanner/tests/entity/: mod.rs  post.rs  user.rs
sea-query-spanner/: Cargo.toml  README.md
sea-query-spanner/src/: functions.rs  lib.rs  query_builder.rs  schema.rs  types.rs  value.rs
src/: array_support.rs  bind.rs  chrono_support.rs  connection.rs  database.rs  error.rs  executor.rs  json_support.rs  lib.rs  proxy.rs  query_result.rs  transaction.rs  uuid_support.rs
tests/: activerecord_tests.rs  array_tests.rs  numeric_tests.rs  type_tests.rs  uuid_tests.rs
tests/common/: mod.rs
tests/entity/: all_types.rs  array_types.rs  category.rs  mod.rs  numeric_types.rs  post.rs  product.rs  user.rs  uuid_types.rs
