[workspace]
members = [".", "sea-query-spanner"]

[package]
name = "sea-orm-spanner"
description = "Google Cloud Spanner backend for SeaORM"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/jubilee-works/sea-orm-spanner"
keywords = ["spanner", "sea-orm", "orm", "database", "google-cloud"]
categories = ["database"]

[lib]
name = "sea_orm_spanner"
path = "src/lib.rs"

[features]
default = ["with-chrono", "with-uuid", "with-json", "with-array", "with-rust_decimal"]
with-array = ["sea-query-spanner/with-array", "sea-orm/postgres-array"]
with-chrono = ["sea-query-spanner/with-chrono", "sea-orm/with-chrono", "chrono", "time"]
with-uuid = ["sea-query-spanner/with-uuid", "sea-orm/with-uuid", "uuid"]
with-json = ["sea-query-spanner/with-json", "sea-orm/with-json", "serde_json"]
with-rust_decimal = [
    "sea-query-spanner/with-rust_decimal",
    "sea-orm/with-rust_decimal",
    "rust_decimal",
]

[dependencies]
sea-orm = { version = "1.1", default-features = false, features = ["proxy"] }
sea-query = { version = "0.32", default-features = false }
sea-query-spanner = { path = "sea-query-spanner" }

google-cloud-spanner = "0.33"
google-cloud-gax = { version = "0.19", default-features = false }
google-cloud-googleapis = { version = "0.16", features = ["spanner"] }
prost-types = "0.13"

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tonic = "0.12"

chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
rust_decimal = { version = "1", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

thiserror = "2"
tracing = "0.1"
base64 = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
google-cloud-spanner = "0.33"
google-cloud-googleapis = { version = "0.16", features = ["spanner"] }
sea-orm = { version = "1.1", features = [
    "proxy",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "with-rust_decimal",
    "postgres-array",
    "runtime-tokio-native-tls",
] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde_json = "1"
serial_test = "3.3.1"
