[workspace]
members = [".", "sea-query-spanner"]

[package]
name = "sea-orm-spanner"
description = "Google Cloud Spanner backend for SeaORM"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/jubilee-works/sea-orm-spanner"
keywords = ["spanner", "sea-orm", "orm", "database", "google-cloud"]
categories = ["database"]

[lib]
name = "sea_orm_spanner"
path = "src/lib.rs"

[features]
default = ["with-chrono", "with-uuid", "with-json", "with-array", "with-rust_decimal"]
with-array = ["sea-query-spanner/with-array", "sea-orm/postgres-array"]
with-chrono = ["sea-query-spanner/with-chrono", "sea-orm/with-chrono", "chrono", "time"]
with-uuid = ["sea-query-spanner/with-uuid", "sea-orm/with-uuid", "uuid"]
with-json = ["sea-query-spanner/with-json", "sea-orm/with-json", "serde_json"]
with-rust_decimal = [
    "sea-query-spanner/with-rust_decimal",
    "sea-orm/with-rust_decimal",
    "rust_decimal",
]
macros = ["sea-orm/macros"]
runtime-tokio-native-tls = ["sea-orm/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sea-orm/runtime-tokio-rustls"]
runtime-async-std-native-tls = ["sea-orm/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sea-orm/runtime-async-std-rustls"]

[dependencies]
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", rev = "559c92ea73a7adb84d9a6aa2dae912cdddfa5bff", default-features = false, features = ["proxy"] }
sea-query = { version = "1.0.0-rc", default-features = false }
sea-query-spanner = { path = "sea-query-spanner" }

gcloud-spanner = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = ["uuid"] }
gcloud-gax = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", default-features = false }
gcloud-googleapis = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = ["spanner"] }
prost-types = "0.14"

async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tonic = "0.12"

chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3", optional = true }
uuid = { version = "1", features = ["v4", "serde"], optional = true }
rust_decimal = { version = "1", features = ["serde"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }

thiserror = "2"
tracing = "0.1"
base64 = "0.13"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
gcloud-spanner = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = ["uuid"] }
gcloud-googleapis = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = ["spanner"] }
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", rev = "559c92ea73a7adb84d9a6aa2dae912cdddfa5bff", features = [
    "proxy",
    "macros",
    "with-chrono",
    "with-uuid",
    "with-json",
    "with-rust_decimal",
    "postgres-array",
    "runtime-tokio-native-tls",
] }
rust_decimal = { version = "1", features = ["serde"] }
rust_decimal_macros = "1"
serde_json = "1"
serial_test = "3.3.1"
