[workspace]
# A separate workspace

[package]
name = "sea-orm-migration-spanner"
version = "0.1.0"
edition = "2021"
description = "Migration utility for SeaORM Spanner"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/jubilee-works/sea-orm-spanner"
keywords = ["spanner", "sea-orm", "migration", "database", "google-cloud"]
categories = ["database"]

[lib]
name = "sea_orm_migration_spanner"
path = "src/lib.rs"

[dependencies]
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", tag = "2.0.0-rc.32", features = [
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { git = "https://github.com/SeaQL/sea-orm.git", tag = "2.0.0-rc.32" }
sea-orm-spanner = { path = ".." }
sea-query-spanner = { path = "../sea-query-spanner" }
gcloud-spanner = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = [
    "uuid",
] }
gcloud-googleapis = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = [
    "spanner",
] }
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
regex = "1"
tracing = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
gcloud-spanner = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = [
    "uuid",
] }
gcloud-googleapis = { git = "https://github.com/devgony/google-cloud-rust.git", branch = "support-uuid", features = [
    "spanner",
] }
async-trait = "0.1"
serial_test = "3.3"
