[workspace]
# A separate workspace

[package]
name = "sea-orm-migration-spanner"
version = "0.1.0"
edition = "2021"
description = "Migration utility for SeaORM Spanner"
license = "MIT OR Apache-2.0"
rust-version = "1.75"
repository = "https://github.com/jubilee-works/sea-orm-spanner"
keywords = ["spanner", "sea-orm", "migration", "database", "google-cloud"]
categories = ["database"]

[lib]
name = "sea_orm_migration_spanner"
path = "src/lib.rs"

[dependencies]
sea-orm = { version = "2.0.0-rc.37", features = [
    "runtime-tokio-native-tls",
    "macros",
] }
sea-orm-migration = { version = "2.0.0-rc.37" }
sea-orm-spanner = { version = "0.1.0", path = ".." }
sea-query-spanner = { version = "0.1.0", path = "../sea-query-spanner" }
gcloud-spanner = "1.7.0"
gcloud-googleapis = { version = "1.3.0", features = ["spanner"] }
gcloud-gax = "1.3.2"
gcloud-longrunning = "1.3.1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
rustls = { version = "0.23", features = ["aws_lc_rs"] }
regex = "1"
tracing = "0.1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"

[features]
default = []

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
gcloud-spanner = "1.7.0"
gcloud-googleapis = { version = "1.3.0", features = ["spanner"] }
async-trait = "0.1"
serial_test = "3.3"
