[package]
name = "sea-orm-spanner"
description = "Google Cloud Spanner backend for SeaORM"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
with-chrono = ["sea-query-spanner/with-chrono", "sea-orm/with-chrono", "chrono"]
with-uuid = ["sea-query-spanner/with-uuid", "sea-orm/with-uuid", "uuid"]
with-json = ["sea-query-spanner/with-json", "sea-orm/with-json", "serde_json"]
with-rust_decimal = ["sea-query-spanner/with-rust_decimal", "sea-orm/with-rust_decimal", "rust_decimal"]

[dependencies]
sea-orm.workspace = true
sea-query.workspace = true
sea-query-spanner = { path = "../sea-query-spanner" }

google-cloud-spanner.workspace = true
google-cloud-gax = { version = "0.9.1", default-features = false }

async-trait.workspace = true
tokio.workspace = true
futures = "0.3"
tonic = "0.12"

chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
rust_decimal = { workspace = true, optional = true }
serde.workspace = true
serde_json = { workspace = true, optional = true }

thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio-test.workspace = true
