[workspace]

[package]
name = "basic-crud"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
sea-orm-spanner = { path = "../..", features = ["with-chrono", "with-uuid"] }
sea-orm = { git = "https://github.com/SeaQL/sea-orm.git", tag = "2.0.0-rc.32", features = [
    "macros",
    "with-chrono",
    "with-uuid",
    "runtime-tokio-native-tls",
] }
gcloud-spanner = "1.7.0"
gcloud-googleapis = { version = "1.3.0", features = ["spanner"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
