[workspace]

[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "migration"
path = "src/main.rs"

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration-spanner = { path = "../../sea-orm-migration-spanner" }
sea-orm = { git = "https://github.com/devgony/sea-orm.git", branch = "fix/mysql-count", features = ["runtime-tokio-native-tls"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
